# mc_manipulation_objects

./: CMakeLists.txt  README.md
descriptions/box/meshes/: box.STL
descriptions/box/rsdf/: box.rsdf
descriptions/box/urdf/: box.urdf.in
descriptions/box/xml/: box.xml
descriptions/cylinder/meshes/: cylinder.STL
descriptions/cylinder/rsdf/: cylinder.rsdf
descriptions/cylinder/urdf/: cylinder.urdf.in
descriptions/cylinder/xml/: cylinder.xml
descriptions/dice/meshes/: dice.STL
descriptions/dice/rsdf/: dice.rsdf
descriptions/dice/urdf/: dice.urdf.in
descriptions/dice/xml/: dice.xml
descriptions/sphere/meshes/: sphere.STL
descriptions/sphere/rsdf/: sphere.rsdf
descriptions/sphere/urdf/: sphere.urdf.in
descriptions/sphere/xml/: sphere.xml
descriptions/wrench/meshes/: c0.STL  c1.STL  c10.STL  c2.STL  c3.STL  c4.STL  c5.STL  c6.STL  c7.STL  c8.STL  c9.STL  wrench.STL
descriptions/wrench/rsdf/: wrench.rsdf
descriptions/wrench/urdf/: wrench.urdf.in
descriptions/wrench/xml/: wrench.xml
descriptions/wrench_holder/meshes/: wrench_holder.STL
descriptions/wrench_holder/urdf/: wrench_holder.urdf.in
descriptions/wrench_holder/xml/: wrench_holder.xml
mc_mujoco/: manipulation_objects.in.yaml
src/: config.h.in  manipulation_object.cpp  manipulation_object.h
tests/: CMakeLists.txt  test_module.cpp
